# mlc-llm

./: CMakeLists.txt  mlp_measurer.py
android/app/src/main/java/ai/mlc/mlcchat/: AppViewModel.kt
cmake/: mlc_llm_rpc.cmake
cpp/: cli_main.cc  llm_chat.cc  prepare_model_lib.py  rpc_dummy.cc
examples/python/: sample_mlc_chat.py
mlc_llm/: utils.py
python/mlc_chat/: chat_module.py
python/mlc_chat/interface/: compile.py
python/mlc_chat/model/llama/: llama_loader.py  llama_model.py
python/mlc_chat/quantization/: group_quantization.py
python/mlc_chat/support/: auto_device.py  auto_target.py
test_app/: CMakeLists.txt  main.cc
